k8s/board-fe-headless-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: board-fe-headless-svc
  namespace: board-fe
spec:
  selector:
    app: board-fe
  type: ClusterIP
  clusterIP: None
  ports:
    - name: rest
      port: 80      # Inner container port
      targetPort: 80  # Service forward port
      protocol: TCP     # Protocol configuration
