k8s/board-fe-nodeport-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: board-fe-np-svc
  namespace: board-fe
spec:
  selector:
    app: board-fe
  type: NodePort
  ports:
    - name: http
      port: 80 # 서비스가 노출되는 포트
      targetPort: k3d # deploy pod와 연결
      nodePort: 30080
      protocol: TCP
