k8s/board-fe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-fe-ingress
  namespace: board-fe
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "demo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: board-fe-headless-svc
                port:
                  number: 80
